--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,11 @@
+platform :ios, '10.0'
 use_frameworks!
 
-platform :ios, '10.0'
+source 'git@github.com:zhang232425/ZJSpecs.git'
+source 'https://github.com/CocoaPods/Specs.git'
 
 target 'ZJDevice_Example' do
+  
   pod 'ZJDevice', :path => '../'
-
-  target 'ZJDevice_Tests' do
-    inherit! :search_paths
-
-    
-  end
+  
 end
